2011-09-21  Pavel Podivilov  <podivilov@chromium.org>

        Web Inspector: migrate RawSourceCode clients to SourceMapping class.
        https://bugs.webkit.org/show_bug.cgi?id=68524

        Clients should use uiSourceCode(), rawLocationToUILocation(), uiLocationToRawLocation() methods of SourceMapping class.
        Initially, RawSourceCode may not have associated SourceMapping, so it is natural to extract this methods and associated state to a separate class.

        Reviewed by Yury Semikhatsky.

        * inspector/front-end/BreakpointManager.js:
        (WebInspector.BreakpointManager.prototype._materializeBreakpoint):
        (WebInspector.BreakpointManager.prototype._breakpointDebuggerLocationChanged):
        * inspector/front-end/DebuggerPresentationModel.js:
        (WebInspector.DebuggerPresentationModel.prototype.linkifyLocation.updateAnchor):
        (WebInspector.DebuggerPresentationModel.prototype.linkifyLocation):
        (WebInspector.DebuggerPresentationModel.prototype._addScript):
        (WebInspector.DebuggerPresentationModel.prototype._updateSourceMapping):
        (WebInspector.DebuggerPresentationModel.prototype._restoreBreakpoints):
        (WebInspector.DebuggerPresentationModel.prototype._restoreConsoleMessages):
        (WebInspector.DebuggerPresentationModel.prototype._consoleMessageAdded):
        (WebInspector.DebuggerPresentationModel.prototype._createPresentationMessage):
        (WebInspector.DebuggerPresentationModel.prototype.continueToLine):
        (WebInspector.PresentationCallFrame.prototype.get url):
        (WebInspector.PresentationCallFrame.prototype.sourceLine.sourceMappingUpdated):
        (WebInspector.PresentationCallFrame.prototype.sourceLine):
        (WebInspector.DebuggerPresentationModelResourceBinding.prototype.canSetContent):
        (WebInspector.DebuggerPresentationModelResourceBinding.prototype.setContent):
        * inspector/front-end/SourceFile.js: