@@ -1,3 +1,13 @@
+2011-09-27  Andrey Kosyakov  <caseq@chromium.org>
+
+        Web Inspector: JS exception upon clicking on "Word Wrap" checkbox in Settings screen
+        https://bugs.webkit.org/show_bug.cgi?id=68888
+
+        Reviewed by Pavel Feldman.
+
+        * inspector/front-end/ElementsPanel.js:
+        (WebInspector.ElementsPanel.prototype._domWordWrapSettingChanged):
+
 2011-09-21  Pavel Podivilov  <podivilov@chromium.org>
 
         Web Inspector: migrate RawSourceCode clients to SourceMapping class.
